--- a/style.css
+++ b/style.css
@@ -47,9 +47,13 @@ $breakpoint:
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
-.button img {
+.button__img {
   width: 6rem;
   padding-right: 2rem;
 }
@@ -60,12 +64,37 @@ $breakpoint:
 
 .button__white {
   background-color: white;
-  color: rgba(0, 0, 0, 0.65);
+  color: rgba(0, 0, 0, 0.7);
   -ms-flex-item-align: end;
       -ms-grid-row-align: end;
       align-self: end;
   -ms-grid-column-align: center;
       justify-self: center;
+}
+
+.title {
+  padding-top: 3rem;
+  text-align: center;
+  font-size: 4rem;
+  font-weight: 100;
+  color: rgba(0, 0, 0, 0.7);
+  letter-spacing: -0.2rem;
+}
+
+.title strong {
+  color: rgba(0, 0, 0, 0.78);
+}
+
+.line {
+  height: 0.3rem;
+  width: 16rem;
+  background-color: #55c0ec;
+  position: absolute;
+  right: 50%;
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
+  margin-top: -0.328rem;
+  border-radius: 1rem;
 }
 
 .nav {
@@ -227,6 +256,10 @@ $breakpoint:
       -ms-grid-row-align: center;
       align-self: center;
   width: 40rem;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 @media only screen and (max-width: 75em) {
@@ -244,5 +277,170 @@ $breakpoint:
     -ms-grid-row-span: 1;
     grid-row: 2/3;
   }
+}
+
+.about {
+  background-color: #fafafa;
+  height: 40rem;
+  position: relative;
+}
+
+@media only screen and (max-width: 75em) {
+  .about {
+    height: 46rem;
+    padding-top: 1rem;
+  }
+}
+
+@media only screen and (max-width: 47em) {
+  .about {
+    height: 85vh;
+    padding-top: 0;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .about {
+    height: 100vh;
+  }
+}
+
+.about__message {
+  margin-top: 3rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  -webkit-column-gap: 4rem;
+          column-gap: 4rem;
+  row-gap: 3rem;
+  font-size: 2rem;
+  color: rgba(0, 0, 0, 0.7);
+  text-align: left;
+  line-height: 2.8rem;
+  width: 75%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+@media only screen and (max-width: 75em) {
+  .about__message {
+    width: 90%;
+    margin-top: 6rem;
+  }
+}
+
+@media only screen and (max-width: 47em) {
+  .about__message {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    margin-top: 0;
+    row-gap: 0;
+    -webkit-column-gap: 0;
+            column-gap: 0;
+    width: 85%;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .about__message {
+    padding-top: 3rem;
+  }
+}
+
+.about__message strong {
+  color: rgba(0, 0, 0, 0.75);
+}
+
+.about__message-1 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+}
+
+@media only screen and (max-width: 47em) {
+  .about__message-1 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+}
+
+.about__message-2 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: start;
+      -ms-grid-row-align: start;
+      align-self: start;
+}
+
+@media only screen and (max-width: 47em) {
+  .about__message-2 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+}
+
+.about__message-3 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+@media only screen and (max-width: 47em) {
+  .about__message-3 {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+}
+
+.about__message-3 span {
+  font-style: italic;
 }
 /*# sourceMappingURL=style.css.map */
