--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@
     margin: 0;
     box-sizing: border-box;
     overflow-x: hidden;
+
 }
 
 html {
@@ -22,6 +23,8 @@ a:visited {
     text-decoration: none;
     color: inherit;
 }
+
+
 
 //****************************//
 //        Media Query         //
@@ -90,8 +93,9 @@ $breakpoint:
     display: flex;
     justify-content: center;
     align-items: center;
+    user-select: none;
 
-    img {
+    &__img {
         width: 6rem;
         padding-right: 2rem;
     }
@@ -102,10 +106,35 @@ $breakpoint:
 
     &__white {
         background-color: white;
-        color: rgba(0, 0, 0, .65);
+        color: rgba(0, 0, 0, .7);
         align-self: end;
         justify-self: center;
     }
+}
+
+// title
+.title {
+    padding-top: 3rem;
+    text-align: center;
+    font-size: 4rem;
+    font-weight: 100;
+    color: rgba(0, 0, 0, 0.7);
+    letter-spacing: -0.2rem;
+
+    strong {
+        color: rgba(0, 0, 0, .78);
+    }
+}
+
+.line {
+    height: 0.3rem;
+    width: 16rem;
+    background-color: rgb(85, 192, 236);
+    position: absolute;
+    right: 50%;
+    transform: translateX(50%);
+    margin-top: -0.328rem;
+    border-radius: 1rem;
 }
 
 ////////////////////////////
@@ -220,6 +249,7 @@ $breakpoint:
         justify-self: center;
         align-self: center;
         width: 40rem;
+        user-select: none;
 
         @include respond(tab-land) {
             width: 30rem;
@@ -229,5 +259,119 @@ $breakpoint:
             grid-column: 1/3;
             grid-row: 2/3;
         }
+    }
+}
+
+////////////////////////////
+///////////About////////////
+////////////////////////////
+.about {
+    background-color: #fafafa;
+    height: 40rem;
+    position: relative;
+
+    @include respond(tab-land) {
+        height: 46rem;
+        padding-top: 1rem;
+    }
+
+    @include respond(tab-port) {
+        height: 85vh;
+        padding-top: 0;
+    }
+
+    @include respond(phone) {
+        height: 100vh;
+    }
+
+    &__message {
+        margin-top: 3rem;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        column-gap: 4rem;
+        row-gap: 3rem;
+        font-size: 2rem;
+        color: rgba(0, 0, 0, 0.7);
+        text-align: left;
+        line-height: 2.8rem;
+        width: 75%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+
+        @include respond(tab-land) {
+            width: 90%;
+            margin-top: 6rem;
+        }
+
+        @include respond(tab-port) {
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
+            margin-top: 0;
+            row-gap: 0;
+            column-gap: 0;
+            width: 85%;
+        }
+
+        @include respond(phone) {
+            padding-top: 3rem;
+        }
+
+        strong {
+            color: rgba(0, 0, 0, .75);
+        }
+
+        &-1 {
+            grid-column: 1/2;
+            grid-row: 1/2;
+            justify-self: center;
+            align-self: start;
+
+            @include respond(tab-port) {
+                grid-row: 1/2;
+                grid-column: 1/2;
+                align-self: center;
+            }
+
+            ;
+        }
+
+        &-2 {
+            grid-column: 2/3;
+            grid-row: 1/2;
+            justify-self: center;
+            align-self: start;
+
+            @include respond(tab-port) {
+                grid-row: 2/3;
+                grid-column: 1/2;
+                align-self: center;
+            }
+
+            ;
+        }
+
+        &-3 {
+            grid-column: 1/3;
+            grid-row: 2/3;
+            justify-self: center;
+            align-self: center;
+
+            @include respond(tab-port) {
+                grid-row: 3/4;
+                grid-column: 1/2;
+            }
+
+            ;
+
+
+            span {
+                font-style: italic;
+            }
+        }
+
     }
 }
