--- a/style.css
+++ b/style.css
@@ -11,13 +11,17 @@ html {
 }
 
 body {
-  font-family: Signika, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+  font-family: Signika, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
 }
 
 a,
 a:visited {
   text-decoration: none;
   color: inherit;
+}
+
+strong {
+  color: rgba(0, 0, 0, 0.75);
 }
 
 /*
@@ -79,10 +83,7 @@ $breakpoint:
   font-weight: 100;
   color: rgba(0, 0, 0, 0.7);
   letter-spacing: -0.2rem;
-}
-
-.title strong {
-  color: rgba(0, 0, 0, 0.78);
+  text-transform: capitalize;
 }
 
 .line {
@@ -125,8 +126,8 @@ $breakpoint:
 
 .nav__list a:hover {
   color: white;
-  -webkit-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .home {
@@ -212,10 +213,6 @@ $breakpoint:
       -ms-grid-row-align: start;
       align-self: start;
   letter-spacing: -2px;
-}
-
-.home__left-title strong {
-  color: rgba(0, 0, 0, 0.7);
 }
 
 .home__left-message {
@@ -355,10 +352,6 @@ $breakpoint:
   }
 }
 
-.about__message strong {
-  color: rgba(0, 0, 0, 0.75);
-}
-
 .about__message-1 {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
@@ -442,5 +435,176 @@ $breakpoint:
 
 .about__message-3 span {
   font-style: italic;
+}
+
+.feature {
+  background-color: #90ddaa;
+}
+
+.feature .features {
+  display: -ms-grid;
+  display: grid;
+}
+
+.feature .features__container {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  padding: 5rem 0 6rem 0;
+  display: -ms-grid;
+  display: grid;
+  width: 100%;
+  -ms-grid-columns: minmax(2rem, 11rem) 35rem 35rem 35rem minmax(2rem, 11rem);
+      grid-template-columns: minmax(2rem, 11rem) 35rem 35rem 35rem minmax(2rem, 11rem);
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+  -webkit-column-gap: 3rem;
+          column-gap: 3rem;
+}
+
+@media only screen and (max-width: 75em) {
+  .feature .features__container {
+    -ms-grid-columns: minmax(0rem, 11rem) 35rem 35rem minmax(0rem, 11rem);
+        grid-template-columns: minmax(0rem, 11rem) 35rem 35rem minmax(0rem, 11rem);
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    -webkit-column-gap: 1.5rem;
+            column-gap: 1.5rem;
+    row-gap: 3rem;
+  }
+}
+
+@media only screen and (max-width: 47em) {
+  .feature .features__container {
+    -ms-grid-columns: minmax(0rem, 11rem) 35rem minmax(0rem, 11rem);
+        grid-template-columns: minmax(0rem, 11rem) 35rem minmax(0rem, 11rem);
+    -ms-grid-rows: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+  }
+}
+
+.feature .features__container .card-1 {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+}
+
+@media only screen and (max-width: 47em) {
+  .feature .features__container .card-1 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+  }
+}
+
+.feature .features__container .card-2 {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+}
+
+@media only screen and (max-width: 47em) {
+  .feature .features__container .card-2 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+}
+
+.feature .features__container .card-3 {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
+  grid-column: 4/5;
+}
+
+@media only screen and (max-width: 75em) {
+  .feature .features__container .card-3 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-column: 2/4;
+    width: auto;
+  }
+}
+
+@media only screen and (max-width: 47em) {
+  .feature .features__container .card-3 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+  }
+}
+
+.feature .features__container .card__container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: auto auto;
+      grid-template-rows: auto auto;
+  background-color: black;
+  border-radius: 0.5rem 0.5rem 0 0;
+}
+
+.feature .features__container .card__container-image {
+  background-color: #40596b;
+  height: 35rem;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  display: -ms-grid;
+  display: grid;
+}
+
+.feature .features__container .card__container-image .img {
+  width: 22.4rem;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.feature .features__container .card__container-text {
+  background-color: white;
+  height: 13.8rem;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  color: rgba(0, 0, 0, 0.7);
+  font-size: 2rem;
+  text-align: center;
+  padding: 2rem;
+  display: -ms-grid;
+  display: grid;
+  line-height: 3rem;
+}
+
+.feature .features__container .card__container-text .text {
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.feature .features__container .card__container-text .text a {
+  color: blue;
 }
 /*# sourceMappingURL=style.css.map */
