--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,8 @@ html {
 body {
   font-family: Signika, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  line-height: 1.5;
 }
 
 a,
@@ -79,404 +81,435 @@ $breakpoint:
   }
 }
 
-////////////////////////////
-/////////variables//////////
-////////////////////////////
+//****************************//
+//         Variables          //
+//****************************//
+$backgroundColor: rgb(64, 89, 107);
+$backgroundColor2: rgb(85, 192, 236);
+$backgroundColor3: rgb(250, 250, 250);
+$navTextColor: rgb(255, 208, 90);
+$darkTextColor: rgba(0, 0, 0, 0.64);
+$darkTextColor2: rgba(0, 0, 0, 0.72);
 
 ////////////////////////////
 /////////components/////////
 ////////////////////////////
-//button
-.button {
-  height: 7rem;
-  width: 30rem;
-  border-radius: 0.5rem;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  user-select: none;
-
-  &__img {
-    width: 6rem;
-    padding-right: 2rem;
-  }
-
-  p {
-    font-size: 2.8rem;
-  }
-
-  &__white {
-    background-color: white;
-    color: rgba(0, 0, 0, 0.7);
-    align-self: end;
-    justify-self: center;
-  }
-  &__blue {
-    background-color: #40596b;
-    color: white;
-  }
-}
-
 // title
 .title {
-  padding-top: 3rem;
-  text-align: center;
   font-size: 4rem;
   font-weight: 100;
-  color: rgba(0, 0, 0, 0.7);
+  text-align: center;
   letter-spacing: -0.2rem;
-  text-transform: capitalize;
+  color: $darkTextColor2;
+  background-image: linear-gradient(to right,
+    $backgroundColor2,
+    $backgroundColor2);
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  background-size: 16rem 0.35rem;
+  line-height: 5rem;
 }
 
-.line {
-  height: 0.3rem;
-  width: 16rem;
-  background-color: rgb(85, 192, 236);
-  position: absolute;
-  right: 50%;
-  transform: translateX(50%);
-  margin-top: -0.328rem;
-  border-radius: 1rem;
+.button {
+  display: grid;
+  border-radius: 0.5rem;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr;
+  background-color: white;
+  width: 30rem;
+  height: 7rem;
+  overflow: hidden;
+  transition: 0.3s all ease-in-out;
+
+  &:hover img {
+    transform: scale(1.48) rotate(19deg);
+  }
+
+  img {
+    margin-left: 2rem;
+    width: 4rem;
+    justify-self: center;
+    align-self: center;
+    transition: 0.3s all ease-in-out;
+  }
+
+  span {
+    justify-self: start;
+    align-self: center;
+    font-size: 3rem;
+    color: $darkTextColor;
+  }
 }
 
-////////////////////////////
-/////////navigation/////////
-////////////////////////////
-.nav {
-  height: 6.15rem;
-  width: 100vw;
-  background-color: rgb(64, 89, 107);
-  font-size: 2rem;
-  white-space: nowrap;
-  color: rgb(255, 208, 90);
+//****************************//
+//           Header           //
+//****************************//
+.header {
+  background-color: $backgroundColor;
 
   &__list {
-    height: 100%;
     display: flex;
+    list-style-type: none;
+    padding: 1.6rem 0;
+    font-size: 2rem;
     justify-content: center;
     align-items: center;
 
-    &-item {
-      padding: 0 0.75rem;
+    @include respond(phone) {
+      font-size: 1.8rem;
     }
 
-    a:hover {
-      color: white;
-      transition: all 0.3s ease-in-out;
+    &-items {
+      padding: 0 0.75rem;
+
+      a {
+        color: $navTextColor;
+        transition: all 0.3s ease-in-out;
+
+        &:active {
+          border: dotted 0.1px white;
+        }
+
+        &:hover {
+          color: white;
+        }
+      }
     }
   }
 }
 
-////////////////////////////
-////////////Home////////////
-////////////////////////////
+//****************************//
+//            Home            //
+//****************************//
 .home {
-  background-color: rgb(85, 192, 236);
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
-  height: 52rem;
-  padding: 0 17rem;
-
-  @include respond(tab-land) {
-    padding: 0rem 5.5rem;
-    column-gap: 5rem;
-  }
+  background-color: $backgroundColor2;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  min-height: calc(100vh - 19.2rem);
+  padding: 2rem 5rem 2rem 2rem;
 
   @include respond(tab-port) {
-    grid-column: 1fr;
-    grid-template-rows: 1fr 1fr;
-    column-gap: 0rem;
-    height: 100vh;
+    flex-direction: column;
+    padding: 2rem;
   }
 
   &__left {
-    grid-column: 1/2;
-    grid-row: 1/2;
-    justify-self: center;
-    align-self: center;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    height: 29rem;
-
-    @include respond(tab-land) {
-      height: 31.5rem;
-    }
-
-    @include respond(tab-port) {
-      grid-column: 1/3;
-      grid-row: 1/2;
-      justify-self: center;
-      align-self: center;
-    }
 
     &-title {
-      font-size: 7.7rem;
-      color: rgba(0, 0, 0, 0.6);
+      font-size: 8rem;
+      color: $darkTextColor;
+      font-weight: 100;
+      letter-spacing: -0.3rem;
+      padding-bottom: 2rem;
       justify-self: center;
-      align-self: start;
-      letter-spacing: -2px;
+      margin-top: -1.5rem;
     }
 
-    &-message {
-      align-self: center;
-      text-align: center;
+    &-text {
+      font-size: 2.8rem;
+      padding-bottom: 2.5rem;
+      color: #f4f4f4;
+      line-height: 3.4rem;
       justify-self: center;
-      color: white;
-      font-size: 2.6rem;
-      width: 80%;
-      font-weight: 500;
+      text-align: center;
+      width: 75%;
 
-      @include respond(tab-land) {
-        width: 85%;
+      @include respond(phone) {
+        width: 90%;
       }
+    }
 
-      @include respond(tab-port) {
-        width: 30rem;
+    &-button {
+      justify-self: center;
+
+      &:hover {
+        transition-delay: 0.4s;
+        transform: scale(0.99);
       }
     }
   }
 
   &__right {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    justify-self: center;
-    align-self: center;
-    width: 40rem;
-    user-select: none;
+    &-image {
+      max-width: 40rem;
+      height: auto;
+      width: 100%;
+      margin-right: 22rem;
+      padding-left: 1.5rem;
 
-    @include respond(tab-land) {
-      width: 30rem;
-    }
-
-    @include respond(tab-port) {
-      grid-column: 1/3;
-      grid-row: 2/3;
+      @include respond(tab-port) {
+        margin: 0;
+        padding-top: 3rem;
+        padding-left: 0;
+      }
     }
   }
 }
 
-////////////////////////////
-///////////About////////////
-////////////////////////////
+//****************************//
+//           About            //
+//****************************//
 .about {
-  background-color: #fafafa;
-  height: 40rem;
-  position: relative;
+  padding: 3rem;
+  background-color: $backgroundColor3;
 
-  @include respond(tab-land) {
-    height: 46rem;
-    padding-top: 1rem;
-  }
-
-  @include respond(tab-port) {
-    height: 85vh;
-    padding-top: 0;
-  }
-
-  @include respond(phone) {
-    height: 100vh;
-  }
-
-  &__message {
-    margin-top: 3rem;
+  .container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    column-gap: 4rem;
-    row-gap: 3rem;
-    font-size: 2rem;
-    color: rgba(0, 0, 0, 0.7);
-    text-align: left;
-    line-height: 2.8rem;
-    width: 75%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    grid-auto-columns: 1fr 1fr;
+    grid-auto-rows: 1fr 1fr;
+    column-gap: 2rem;
+    padding: 0 15rem;
 
     @include respond(tab-land) {
-      width: 90%;
-      margin-top: 6rem;
+      padding: 0 2rem;
     }
 
     @include respond(tab-port) {
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
-      margin-top: 0;
-      row-gap: 0;
+      grid-auto-columns: 1fr;
+      grid-auto-rows: 1fr 1fr 1fr;
       column-gap: 0;
-      width: 85%;
+    }
+  }
+
+  &__text {
+    font-size: 2rem;
+    color: $darkTextColor;
+
+    @include respond(phone) {
+      text-align: left;
+    }
+  }
+
+  &__text1 {
+    padding-top: 4rem;
+
+    @include respond(tab-port) {
+      grid-column: span;
+      grid-row: 1/2;
+    }
+  }
+
+  &__text2 {
+    padding-top: 4rem;
+
+    @include respond(tab-port) {
+      grid-row: 2/3;
+      padding-top: 2rem;
+    }
+  }
+
+  &__text3 {
+    grid-column: 1/3;
+    padding-top: 4rem;
+
+    @include respond(tab-port) {
+      grid-row: 3/4;
+      grid-column: 1/2;
+      padding-top: 0;
+    }
+
+    span {
+      font-style: italic;
+    }
+  }
+}
+
+//****************************//
+//         Features           //
+//****************************//
+.feature {
+  padding: 3rem;
+  background-color: #90ddaa;
+
+  @include respond(phone) {
+    padding: 3rem 0rem;
+  }
+}
+
+.features {
+  display: grid;
+
+  &__container {
+    justify-content: center;
+    align-content: center;
+    padding: 5rem 0 6rem 0;
+    display: grid;
+    width: 100%;
+    grid-template-columns: minmax(2rem, 11rem) 35rem 35rem 35rem minmax(2rem,
+      11rem);
+    grid-template-rows: 1fr;
+    column-gap: 3rem;
+
+    @include respond(tab-land) {
+      grid-template-columns: minmax(0rem, 11rem) 32rem 32rem minmax(0rem, 11rem);
+      grid-template-rows: 1fr 1fr;
+      column-gap: 1.5rem;
+      row-gap: 3rem;
+    }
+
+    @include respond(tab-port) {
+      grid-template-columns: minmax(0rem, 11rem) 35rem minmax(0rem, 11rem);
+      grid-template-rows: 1fr 1fr 1fr;
     }
 
     @include respond(phone) {
-      padding-top: 3rem;
+      grid-template-columns: minmax(0rem, 11rem) 32rem minmax(0rem, 11rem);
+      grid-template-rows: 1fr 1fr 1fr;
     }
 
-    &-1 {
-      grid-column: 1/2;
-      grid-row: 1/2;
-      justify-self: center;
-      align-self: start;
-
-      @include respond(tab-port) {
-        grid-row: 1/2;
-        grid-column: 1/2;
-        align-self: center;
-      }
-    }
-
-    &-2 {
+    .card-1 {
       grid-column: 2/3;
       grid-row: 1/2;
-      justify-self: center;
-      align-self: start;
 
       @include respond(tab-port) {
-        grid-row: 2/3;
-        grid-column: 1/2;
-        align-self: center;
-      }
-    }
-
-    &-3 {
-      grid-column: 1/3;
-      grid-row: 2/3;
-      justify-self: center;
-      align-self: center;
-
-      @include respond(tab-port) {
-        grid-row: 3/4;
-        grid-column: 1/2;
-      }
-
-      span {
-        font-style: italic;
-      }
-    }
-  }
-}
-
-////////////////////////////
-//////////Features//////////
-////////////////////////////
-.feature {
-  background-color: #90ddaa;
-
-  .features {
-    display: grid;
-    &__container {
-      justify-content: center;
-      align-content: center;
-      padding: 5rem 0 6rem 0;
-      display: grid;
-      width: 100%;
-      grid-template-columns: minmax(2rem, 11rem) 35rem 35rem 35rem minmax(
-          2rem,
-          11rem
-        );
-      grid-template-rows: 1fr;
-      column-gap: 3rem;
-      @include respond(tab-land) {
-        grid-template-columns: minmax(0rem, 11rem) 35rem 35rem minmax(
-            0rem,
-            11rem
-          );
-        grid-template-rows: 1fr 1fr;
-        column-gap: 1.5rem;
-        row-gap: 3rem;
-      }
-      @include respond(tab-port) {
-        grid-template-columns: minmax(0rem, 11rem) 35rem minmax(0rem, 11rem);
-        grid-template-rows: 1fr 1fr 1fr;
-      }
-      .card-1 {
         grid-column: 2/3;
+      }
+    }
+
+    .card-2 {
+      grid-column: 3/4;
+      grid-row: 1/2;
+
+      @include respond(tab-port) {
+        grid-column: 2/3;
+        grid-row: 2/3;
+      }
+    }
+
+    .card-3 {
+      grid-column: 4/5;
+
+      @include respond(tab-land) {
+        grid-row: 2/3;
+        grid-column: 2/4;
+        width: auto;
+      }
+
+      @include respond(tab-port) {
+        grid-column: 2/3;
+        grid-row: 3/4;
+      }
+    }
+
+    .card__container {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: auto auto;
+      background-color: black;
+      border-radius: 0.5rem 0.5rem 0 0;
+
+      &-image {
+        background-color: rgb(64, 89, 107);
+        height: 35rem;
         grid-row: 1/2;
-        @include respond(tab-port) {
-          grid-column: 2/3;
-        }
-      }
-      .card-2 {
-        grid-column: 3/4;
-        grid-row: 1/2;
-        @include respond(tab-port) {
-          grid-column: 2/3;
-          grid-row: 2/3;
-        }
-      }
-      .card-3 {
-        grid-column: 4/5;
-        @include respond(tab-land) {
-          grid-row: 2/3;
-          grid-column: 2/4;
-          width: auto;
-        }
-        @include respond(tab-port) {
-          grid-column: 2/3;
-          grid-row: 3/4;
-        }
-      }
-      .card__container {
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto auto;
-        background-color: black;
-        border-radius: 0.5rem 0.5rem 0 0;
 
-        &-image {
-          background-color: rgb(64, 89, 107);
-          height: 35rem;
-          grid-row: 1/2;
-          display: grid;
-          .img {
-            width: 22.4rem;
-            justify-self: center;
-            align-self: center;
-          }
+        .img {
+          width: 22.4rem;
+          justify-self: center;
+          align-self: center;
         }
+      }
 
-        &-text {
-          background-color: white;
-          height: 13.8rem;
-          grid-row: 2/3;
-          color: rgba(0, 0, 0, 0.7);
-          font-size: 2rem;
-          text-align: center;
-          padding: 2rem;
-          display: grid;
-          line-height: 3rem;
-          .text {
-            justify-self: center;
-            align-self: center;
-            a {
-              color: blue;
-            }
+      &-text {
+        background-color: white;
+        height: 13.8rem;
+        grid-row: 2/3;
+        color: rgba(0, 0, 0, 0.7);
+        font-size: 2rem;
+        text-align: center;
+        padding: 2rem;
+        display: grid;
+        line-height: 3rem;
+
+        .text {
+          justify-self: center;
+          align-self: center;
+
+          a {
+            color: blue;
           }
         }
       }
     }
   }
 }
-////////////////////////////
-/////////Add to Slack///////
-////////////////////////////
-.addToSlack {
-  text-align: center;
-  display: grid;
-  font-size: 2rem;
-  &__text1 {
-    padding: 5rem 49rem 8rem 49rem;
 
-    justify-self: center;
+//****************************//
+//         Add To Slack       //
+//****************************//
+
+.addToSlack {
+  padding: 3rem 15rem;
+
+  @include respond(tab-land) {
+    padding: 3rem 10rem;
   }
-  &__button {
+
+  @include respond(tab-port) {
+    padding: 3rem;
+  }
+
+  .container3 {
+    display: grid;
+  }
+
+  &-text {
+    font-size: 2rem;
     justify-self: center;
     align-self: center;
+    text-align: center;
+    width: 45%;
+    color: $darkTextColor2;
+    padding: 4rem 0;
+
+    @include respond(tab-land) {
+      width: 55%;
+    }
+
+    @include respond(tab-port) {
+      width: 84%;
+    }
+
+    @include respond(phone) {
+      width: 90%;
+    }
   }
-  &__text {
-    padding: 8rem 49rem 5rem 49rem;
+
+  &-button {
+    background-color: $backgroundColor;
+    justify-self: center;
+    align-self: center;
+    margin: 4rem 0;
+
+    span,
+    strong {
+      color: $backgroundColor3;
+    }
+
+    &:hover {
+      background-color: $darkTextColor;
+      transform: scale(0.99);
+    }
+  }
+}
+
+//****************************//
+//         Footer             //
+//****************************//
+.footer {
+  background-color: $backgroundColor;
+  display: grid;
+  padding: 1.5rem;
+
+  &-text {
+    line-height: 2.5rem;
+    justify-content: center;
+    align-self: center;
+    text-align: center;
+    font-size: 1.4rem;
+    color: rgba(255, 255, 255, 0.7);
   }
 }
