--- a/style.scss
+++ b/style.scss
@@ -253,12 +253,13 @@ $darkTextColor2: rgba(0, 0, 0, 0.72);
   height: 5rem;
   width: 5rem;
   background-color: $navTextColor;
-  display: grid;
+  display: none;
   border-radius: 0.2rem;
   position: fixed;
   bottom: 2rem;
   right: 2rem;
   cursor: pointer;
+
 
   a {
     width: 4rem;
